# sec-gate-fedid-binding

./: .gitignore  CMakeLists.txt  README.md  info.json
conf.d/cmake/: 00-debian-config.cmake  00-opensuse-config.cmake  01-ubuntu-config.cmake  config.cmake
conf.d/wgt/: config.xml.in
docs/: 1-architecture_presentation.md  2-installation_guide.md  3-configuration.md  4-running_and_testing.md  api-services-book.yml
src/: CMakeLists.txt  fedid-binding.c  fedid-binding.h  manifest.yml.in
src/fedid-types/: CMakeLists.txt  fedid-types-glue.c  fedid-types-glue.h  fedid-types.c  fedid-types.conf.in  fedid-types.h  fedid-types.pc.in
src/sqldb-glue/: CMakeLists.txt  db.md  sqldb-glue.c  sqldb-glue.h
